--- a/views/main.hbs
+++ b/views/main.hbs
@@ -21,7 +21,7 @@
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Welcome</h1>
-      <h2>Winter</h2>
+      <h2>Winters</h2>
       <h5 class="w3-padding-32">Winter is the coldest season of the year in polar and temperature zones.</h5>
       <p class="w3-text-grey">Click on search in the navigation bar, to begin.</p>
     </div>
