--- a/views/historical.hbs
+++ b/views/historical.hbs
@@ -19,7 +19,7 @@
   <div class="w3-content">
     <div class="w3-twothird w3-center">
       <form action = "/" method = "post">
-        <button class = "w3-button w3-lime w3-large" type = "submit" formaction = "/delete">Delete All Recordss</button>
+        <button class = "w3-button w3-lime w3-large" type = "submit" formaction = "/delete">Delete All Records</button>
       </form>
       <h5>
         <table class="w3-table-all w3-centered">
